--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -12,7 +12,13 @@
     <title>Login - Lyriclink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
   </head>
-  <body>
+  <body class="p-6">
+    <nav
+      class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
+    >
+      <a href="/"><h1 class="text-2xl font-bold">Lyriclink</h1></a>
+      </div>
+    </nav>
     <main>
       <div
         id="login"
@@ -28,29 +34,15 @@
             Login to access your LyricLink dashboard and start creating events
             for your congregation!
           </p>
-          <form @submit.prevent="login" class="space-y-4 max-w-full mx-auto">
-            <input
-              autocomplete="email"
-              type="email"
-              placeholder="Email"
-              x-model="email"
-              class="w-full p-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-gray-900"
-            />
-            <input
-              autocomplete="current-password"
-              type="password"
-              placeholder="Password"
-              x-model="password"
-              class="w-full p-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-gray-900"
-            />
-            <p x-text="errorMessage" class="text-red-600"></p>
+          <a
+            href="{{.}}"
+          >
             <button
-              type="submit"
               class="w-full flex items-center justify-center rounded-xl border border-transparent bg-gray-900 px-8 py-3 text-lg tracking-wide text-white transition-colors hover:bg-gray-700"
             >
               Login →
             </button>
-          </form>
+          </a>
         </div>
       </div>
     </main>
