--- a/frontend/views/settings.html
+++ b/frontend/views/settings.html
@@ -14,7 +14,7 @@
   </head>
   <body class="p-6">
     <nav
-      class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
+      class="bg-white shadow-md p-5 flex justify-between items-center rounded-full"
     >
       <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
       <div class="flex items-center space-x-4">
