logout button dropdown menu

--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -10,35 +10,55 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
     <script defer src="/static/modal.js"></script>
+    <script src="/static/navbar.js"></script>
     <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/addEventModal.js"></script>
   </head>
   <body
     class="p-6"
-    x-init="
-      data = JSON.parse($el.getAttribute('data-dash'));
-      user = data.user
-      events = data.events
-  
-      console.log(data)
-    "
+    x-data="{
+    data: JSON.parse($el.getAttribute('data-dash')),
+    get user() { return this.data.user },
+    get events() { return this.data.events },
+    showHoverSettingsModal: false
+    }"
     data-dash="{{ .Data }}"
   >
     <nav
-      class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
+      class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full relative"
     >
       <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
       <div class="flex items-center space-x-4">
+        <div class="w-10 h-10 bg-gray-300 rounded-full">
+          <template x-if="user.avatar">
+            <img
+              class="w-10 h-10 bg-gray-300 rounded-full"
+              :src="user.avatar"
+              alt=""
+              @click="showHoverSettingsModal = !showHoverSettingsModal"
+            />
+          </template>
+        </div>
+      </div>
+      <div
+        x-show="showHoverSettingsModal"
+        x-transition
+        @click.outside="showHoverSettingsModal = false"
+        class="w-48 bg-white border border-gray-200 rounded shadow-md p-2 absolute right-0 top-20 bg-gray-200"
+      >
         <a href="/settings">
-          <div class="w-10 h-10 bg-gray-300 rounded-full">
-            <template x-if="user.avatar">
-              <img
-                class="w-10 h-10 bg-gray-300 rounded-full"
-                :src="user.avatar"
-                alt=""
-              />
-            </template>
-          </div>
+          <button
+            class="w-full text-left px-4 py-2 hover:bg-gray-100 rounded cursor-pointer text-sm text-gray-700"
+          >
+            Settings
+          </button>
+        </a>
+        <a onclick="logout()">
+          <button
+            class="w-full text-left px-4 py-2 hover:bg-gray-100 rounded cursor-pointer text-sm text-red-600"
+          >
+            Logout
+          </button>
         </a>
       </div>
     </nav>
