--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Event - Lyriclink</title>
+    <title>Event - Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
     <script
       defer
@@ -32,7 +32,7 @@
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
     >
-      <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
+      <a href="/dashboard"><h1 class="text-2xl font-bold">Lyricslink</h1></a>
       <div class="flex items-center space-x-4">
         <a href="/settings">
           <div class="w-10 h-10 bg-gray-300 rounded-full">
