--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -9,14 +9,14 @@
     ></script>
     <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/login.js"></script>
-    <title>Login - Lyriclink</title>
+    <title>Login - Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
   </head>
   <body class="p-6">
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
     >
-      <a href="/"><h1 class="text-2xl font-bold">Lyriclink</h1></a>
+      <a href="/"><h1 class="text-2xl font-bold">Lyricslink</h1></a>
       </div>
     </nav>
     <main>
@@ -26,12 +26,12 @@
         class="m-auto px-8 pt-32 text-black-800 md:w-[650px]"
       >
         <div class="font-title space-y-2 text-center">
-          <h2 class="text-6xl font-extrabold">Login with Lyriclink</h2>
+          <h2 class="text-6xl font-extrabold">Login with Lyricslink</h2>
         </div>
 
         <div class="space-y-6 pt-16 text-xl">
           <p>
-            Login to access your LyricLink dashboard and start creating events
+            Login to access your Lyricslink dashboard and start creating events
             for your congregation!
           </p>
           <a
