--- a/frontend/views/settings.html
+++ b/frontend/views/settings.html
@@ -9,14 +9,14 @@
     ></script>
     <script src="/static/alpine/userSettings.js"></script>
     <link href="/static/output.css" rel="stylesheet" />
-    <title>Settings - Lyriclink</title>
+    <title>Settings - Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
   </head>
   <body class="p-6">
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center rounded-full"
     >
-      <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
+      <a href="/dashboard"><h1 class="text-2xl font-bold">Lyricslink</h1></a>
       <div class="flex items-center space-x-4">
         <img
           class="w-10 h-10 bg-gray-300 rounded-full"
