--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard - Lyriclink</title>
+    <title>Dashboard - Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
     <script
       defer
@@ -27,7 +27,7 @@
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full relative"
     >
-      <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
+      <a href="/dashboard"><h1 class="text-2xl font-bold">Lyricslink</h1></a>
       <div class="flex items-center space-x-4">
         <div class="w-10 h-10 bg-gray-300 rounded-full">
           <template x-if="user.avatar">
