--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -9,14 +9,14 @@
     ></script>
     <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/register.js"></script>
-    <title>Lyriclink</title>
+    <title>Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png">
   </head>
   <body class="p-6">
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
     >
-      <a href="/"><h1 class="text-2xl font-bold">Lyriclink</h1></a>
+      <a href="/"><h1 class="text-2xl font-bold">Lyricslink</h1></a>
      
         <a href="/login">
           <p class="text-xl font-bold">Login</p>
@@ -29,7 +29,7 @@
       >
         <img src="/static/lyriclink.png" alt="" class="h-18 rounded-full" />
         <div class="flex items-center justify-around w-full">
-          <h1 class="text-8xl font-extrabold">Lyric Link</h1>
+          <h1 class="text-8xl font-extrabold">Lyricslink</h1>
         </div>
         <h2 class="pt-6 text-2xl">Seamless Lyrics, Effortless Sharing.</h2>
         <a
@@ -48,15 +48,15 @@
 
         <div class="space-y-6 pt-16 text-xl">
           <p>
-            Lyriclink is a powerful lyric-sharing platform designed to
+            Lyricslink is a powerful lyric-sharing platform designed to
             streamline the way worship leaders share lyrics.
           </p>
           <p>
-            By integrating with Planning Center, Lyriclink allows users to
+            By integrating with Planning Center, Lyricslink allows users to
             effortlessly <strong>create</strong>, <strong>format</strong>, and
             <strong>share</strong> lyric sheets via a simple URL. Whether you're
             leading a worship set, coordinating with a band, or organizing
-            lyrics for an event, Lyriclink makes distribution seamless and
+            lyrics for an event, Lyricslink makes distribution seamless and
             accessible
           </p>
           <p>
