--- a/frontend/views/live.html
+++ b/frontend/views/live.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lyriclink</title>
+    <title>Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
     <script
       defer
