--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -29,7 +29,7 @@
       >
         <img src="/static/lyriclink.png" alt="" class="h-18 rounded-full" />
         <div class="flex items-center justify-around w-full">
-          <h1 class="text-8xl font-extrabold">Lyricslink</h1>
+          <h1 class="text-6xl font-extrabold md:text-8xl lg:text-8xl">Lyricslink</h1>
         </div>
         <h2 class="pt-6 text-2xl">Seamless Lyrics, Effortless Sharing.</h2>
         <a
