pass correct attribute

--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -222,7 +222,7 @@
               >
                 <div
                   class="px-4 py-2 hover:bg-gray-100 cursor-pointer"
-                  @click="addArrangementToEvent(arrangement.id)"
+                  @click="addArrangementToEvent(arrangement.id, arrangement.song_id)"
                 >
                   <p class="font-bold text-lg" x-text="arrangement.name"></p>
                 </div>
