--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -190,6 +190,17 @@
             >
               <div class="px-4 py-2">
                 <p class="font-bold text-lg">No Results</p>
+                <hr />
+                <p class="text-sm text-gray-700">
+                  If you don't see the song you're looking for, make sure you've
+                  synced your Planning Center songs to LyricsLink. You can do
+                  this from Settings.
+                </p>
+                <div
+                  class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-sm tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit mt-2"
+                >
+                  <a href="/settings">Settings</a>
+                </div>
               </div>
             </div>
             <div
