--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="We make sharing lyrics easier than it has ever been." />
+    <meta property="og:description" content="Easily integrate your Planning Center songs to start sharing now." />
+    <meta property="og:image" content="/static/lyricslink_og.png" />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
