--- a/frontend/views/live.html
+++ b/frontend/views/live.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="What We're Singing!" />
+    <meta
+      property="og:description"
+      content="Check out the full list of songs that we're singing."
+    />
     <title>Lyricslink</title>
     <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
     <script
